--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,9 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
 
+    - name: Install gh-pages
+      run: npm install -g gh-pages
+
     - name: Deploy with gh-pages
       run: |
         git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
